--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ margin: 0;
 padding: 0;
 text-decoration: none;
 list-style: none;
-font-family: 'Abel', sans-serif;
+font-family: 'Slabo 23px', serif;
 }
 
 header{
@@ -14,6 +14,10 @@ header{
     /* display: flex;
     justify-content: space-between;
     justify-items: center; */
+}
+
+body{
+    background: black;
 }
 
 .logo img{
@@ -98,22 +102,112 @@ span{
 
 .button a:hover{
     background: rgb(7, 7, 7);
-    color: #08fdd8;
+    color: #08fdd8e7;
     /* cursor: pointer; */
     animation: 3s linear 1s infinite alternate slidein;
 }
 
-.body{
+section{
     width: 100%;
-    height: 700px;
-    /* background: black; */
+    height: 550px;
+    position: relative;
+    justify-items: center;
+    border-top-left-radius: 80px;
+}
+
+.body{
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    padding-top: 90px;
+}
+
+.h{
+    font-size: 30px;
+    font-weight: 20px;
+    text-align: center;
+    padding-top: 50px;
+    color: #08fdd8;
 }
 
 .moi img{
-height: 400px;
-width: 350px;
+height: 350px;
+width: 300px;
 border-radius: 50px;
 }
+
+.me{
+    height: 300px;
+    width: 50%;
+    /* text-align: center; */
+    padding: 40px;
+    display: block;
+    color: #fff;
+}
+
+
+.corp{
+border-radius:70px;
+background-color: rgb(15, 14, 14);
+height: 450px;
+width: 100%; 
+margin-top: 40px;
+}
+
+
+.bloc-img img{
+    height: 70px;
+    width: 70px;
+
+}
+
+.block-img img{
+    height: 70px;
+    width: 70px;
+
+}
+
+.bloc{
+    background-color: rgb(248, 250, 245);
+    width: 30%;
+    margin: 15px;
+    height: 250px;
+    border-radius: 40px;
+    box-shadow: inset 0 0 1em rgba(250, 250, 248, 0.308), 0 0 2em rgb(8, 8, 8);
+}
+
+.bloc-img{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
+
+.block-img{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
+
+.block{
+    background-color: rgb(248, 250, 245);
+    width: 30%;
+    height: 250px;
+    margin: 15px;
+    border-radius: 40px;
+    box-shadow: inset 0 0 1em rgba(250, 250, 248, 0.308), 0 0 2em rgb(8, 8, 8);
+}
+
+.main{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    height: 400px;
+    padding-top: 30px;
+}
+
 
